objects/vlocity_cmt__CompiledAttributeOverride__c.object
<CustomObject>
    <description>A compiled attribute override defines the JSON representation net of all attribute overrides for a given product (usually a commercial offer).</description>
    <fields>
        <fullName>vlocity_cmt__AttributeDefaultValues__c</fullName>
        <label>Attribute Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeMetadataChanges__c</fullName>
        <label>Attribute Metadata Changes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeMetadata__c</fullName>
        <label>Attribute Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeRules__c</fullName>
        <label>Attribute Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing the compiled Vlocity Attribute value data after all overrides have been applied.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Child Item</label>
        <referenceTo>vlocity_cmt__ProductChildItem__c</referenceTo>
        <relationshipLabel>Compiled Attribute Override</relationshipLabel>
        <relationshipName>Compiled_Attribute_Override</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Offer product which is the subject of this Compiled Attribute Override.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Compiled Attribute Overrides</relationshipLabel>
        <relationshipName>CompiledAttributeOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Compiled Attribute Override</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Compiled Attribute Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compiled Attribute Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>